force-app/main/default/objects/Attendance__c/fields/Class_Leader_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Leader_Name__c</fullName>
    <description>Name of the parent class leader</description>
    <formula>Class__r.Session_Leader_Name__c</formula>
    <inlineHelpText>Name of the class leader</inlineHelpText>
    <label>Class Leader Name</label>
    <type>Text</type>
</CustomField>