force-app/main/default/objects/Attendance__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Registration_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive, Withdrawn</value>
        </filterItems>
        <infoMessage>By default, Contacts who are inactive or who have withdrawn are not shown in this list - click on "Show all results" to see all Contacts regardless of Registration Status</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>