force-app/main/default/objects/Attendance__c/fields/DisableButtons__c.field-meta.xml
<CustomField>
    <fullName>DisableButtons__c</fullName>
    <formula>ISPICKVAL(Attendance_Status__c, "Attended") || ISPICKVAL( Attendance_Status__c, "Cancelled")</formula>
    <inlineHelpText>If true, then the attendance buttons on the Lightning page for Class Attendance management get diabled</inlineHelpText>
    <label>DisableButtons</label>
    <type>Checkbox</type>
</CustomField>