force-app/main/default/objects/Attendance__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>Contact__r.Full_Name__c</formula>
    <label>FullName</label>
    <type>Text</type>
</CustomField>