force-app/main/default/objects/Attendance__c/fields/I_am_the_assistant__c.field-meta.xml
<CustomField>
    <fullName>I_am_the_assistant__c</fullName>
    <formula>$User.FirstName =  Contact__r.FirstName  &amp;&amp; 
 $User.LastName =  Contact__r.LastName &amp;&amp;
  NOT ISPICKVAL( Attendance_Status__c, "Cancelled" ) &amp;&amp;
  ISPICKVAL( Role__c , "Assistant" )</formula>
    <label>I am the assistant</label>
    <type>Checkbox</type>
</CustomField>