force-app/main/default/objects/Attendance__c/fields/Notification_email_copy__c.field-meta.xml
<CustomField>
    <fullName>Notification_email_copy__c</fullName>
    <label>Notification email copy</label>
    <type>Email</type>
</CustomField>