force-app/main/default/objects/Attendance__c/fields/Post_Class_Email_sent__c.field-meta.xml
<CustomField>
    <fullName>Post_Class_Email_sent__c</fullName>
    <formula>NOT isblank( Post_Class_Summary_sent__c )</formula>
    <inlineHelpText>True if the post-class summary email has been sent.  Used to control if the "attended" and "did not attend" buttons are enabled on he Class attendance component</inlineHelpText>
    <label>Post Class Email sent</label>
    <type>Checkbox</type>
</CustomField>