force-app/main/default/objects/Attendance__c/fields/Post_Class_Summary_sent__c.field-meta.xml
<CustomField>
    <fullName>Post_Class_Summary_sent__c</fullName>
    <inlineHelpText>The date on which the "Sorry you couldn't make it" or the "Thanks for attending email was sent
The email is triggered by the Attendance Record status being updated to "Attended" or "Canceled"</inlineHelpText>
    <label>Post Class Summary sent date/time</label>
    <type>DateTime</type>
</CustomField>