force-app/main/default/objects/Attendance__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
                <default>true</default>
                <label>Student</label>
            </value>
            <value>
                <fullName>Leader</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>