force-app/main/default/objects/Attendance__c/validationRules/Prevent_adding_student_if_no_leader.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_adding_student_if_no_leader</fullName>
    <active>true</active>
    <description>To ensure that the reminder emails that get sent to students/parental contacts have leader details on them, prevent users adding students if there is no instructor</description>
    <errorConditionFormula>ISPICKVAL(Role__c, "Student")   &amp;&amp;  isblank(Class__r.Leader__r.Id)</errorConditionFormula>
    <errorMessage>You cannot add a student to the Class until the Class has a leader assigned to it</errorMessage>
</ValidationRule>